ZODB Requires:
~~~~~~~~~~~~~~
-

New features:
~~~~~~~~~~~~~
- Ordered List and Unordered List widgets
-

Bug fixes:
~~~~~~~~~~
- Don't fail when logging an error when there are duplicate fields.

New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-